--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,14 @@ install==1.3.4
 newsapi-python==0.2.6
 platformdirs==2.4.0
 psycopg2==2.9.2
+python-http-client==3.3.3
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
+sendgrid==6.9.1
 six==1.16.0
 sqlparse==0.4.2
+starkbank-ecdsa==2.0.2
 tzdata==2021.5
 tzlocal==4.1
 urllib3==1.26.7
